--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,8 @@ dependencies:
   cupertino_icons: ^0.1.3
 
   english_words: ^3.1.5
+  #瀑布流
+  flutter_staggered_grid_view: ^0.3.2
 
 dev_dependencies:
   flutter_test:
