--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
   english_words: ^3.1.5
   #瀑布流
   flutter_staggered_grid_view: ^0.3.2
+  flutter_swiper: ^1.1.6
 
 dev_dependencies:
   flutter_test:
